               solving the equation via ‘uniroot’.

         • ‘calc_FiniteMixture()’

             • Fixed a bug where certain arguments where not passed to
               `plot_RLum.Results` so that the plot was not as
               customisable as intended.  Thanks to Daniele Questiaux
               for reporting the bug.

         • ‘plot_DetPlot()’

             • Correct negative y-axis, the minimum is now the real
               minimum.

         • ‘plot_GrowthCurve()’

             • Reduce number of confusing warning,

             • add new argument ‘mode’ to select the calculation mode
               of the function.  This allows in particular to only fit
               data without calculating a De or calculating a De
               assuming an additive dose reponse curve,

             • account for the very specifc case that all dose points
               are similar. The function stops with an error and
               returns NULL.

         • ‘plot_RadialPlot()’

             • Sometimes the function crashed with an out of bonds
               error if more than one data set was provided; fixed,

             • argument ‘negatives’ caused an error if not set to
               ‘'remove'’ and fix some errors around this option,

             • De-adjustment for negative values optimised for large
               scatter.

         • ‘plot_RLum.Data.Spectrum()’

             • The interactive plot option was broken with the last
               update of the package 'plotly'; fixed.

         • ‘read_BIN2R()’

             • If BIN-files are automatically imported the function
               skipped non BIN-files without crashing if it is used in
               combination with the argument ‘pattern’,

             • add new argument ‘irgnore.RECTYPE’ to provide a solution
               for broken BIN-files are BIN-files with non documented
               entries. Furthermore the general behaviour for such
               cases had been optimised.
